fix: get the app buttons spacing

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ button {
 	justify-content: space-between;
 	align-items: center;
 	flex-direction: column;
-	max-width: 335px;
+	max-width: 350px;
 	width: 100%;
 	padding: 2rem;
 	background: rgba(255, 255, 255, 0.7);
@@ -215,6 +215,7 @@ button {
 	justify-content: center;
 	width: 100%;
 	padding: 1.3rem 0;
+	max-width: 350px;
 }
 
 .download {
